--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_phone_book">PhoneBook</string>
+    <string name="title_person_list">People</string>
+    <string name="title_person_detail">Person Detail</string>
 
 </resources>
